[fe] Fix vertical overflow in unit host
Adding "display: flex" somehow prevent the Material sidenav-container
from adding a bit of extra vertical space, causing an unnecessary
scrollbar.

Also move the styling from global into the component. It is still
outside the scope of the component though and ng-deep has to be used.

--- a/frontend/src/app/test-controller/components/unithost/unithost.component.css
+++ b/frontend/src/app/test-controller/components/unithost/unithost.component.css
@@ -3,9 +3,15 @@
   height: 100%;
 }
 
-iframe {
+:host ::ng-deep iframe.unitHost {
   width: 100%;
   height: 100%;
+  background-color: white;
+  border: none;
+  margin: 0;
+  /*For some reason this prevents extra space being reserved in
+   mat-sidenav-container, causing a scollbar.*/
+  display: flex;
 }
 
 .lock-overlay {
