--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,15 +7,6 @@ body {
   font-family: 'Nunito Sans', sans-serif;
 }
 
-/* has to be global because dynamic created element is not in the scope of the component */
-iframe.unitHost {
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  border: none;
-  margin: 0;
-}
-
 .flex-row {
   display: flex;
   flex-direction: row;
